Fix JS TypeError in nav menu and remove caret on mobile (Fix #186) (#247)
* Fix JS TypeError in nav menu Fix #186

--- a/media/css/m24/components/navigation-refresh.scss
+++ b/media/css/m24/components/navigation-refresh.scss
@@ -204,20 +204,22 @@ $margin-top: 58px; // top margin offset for mobile navigation menu
     }
 }
 
-.m24-c-menu .mzp-has-drop-down.m24-c-menu-category {
-     h2::after {
-        @include bidi(((margin-left, $spacing-sm, margin-right, 0),));
-        content: '';
-        background: url('/media/img/icons/caret-sprite.svg') no-repeat bottom left / auto 12px;
-        display: inline-block;
-        height: 12px;
-        vertical-align: baseline;
-        width: 12px;
-    }
-
-    &.mzp-is-selected {
+@media #{$mq-md} {
+    .m24-c-menu .mzp-has-drop-down.m24-c-menu-category {
         h2::after {
-            background-position: bottom right;
+            @include bidi(((margin-left, $spacing-sm, margin-right, 0),));
+            content: '';
+            background: url('/media/img/icons/caret-sprite.svg') no-repeat bottom left / auto 12px;
+            display: inline-block;
+            height: 12px;
+            vertical-align: baseline;
+            width: 12px;
+        }
+
+        &.mzp-is-selected {
+            h2::after {
+                background-position: bottom right;
+            }
         }
     }
 }
